--- a/src/board/boardTile.css
+++ b/src/board/boardTile.css
@@ -1,9 +1,17 @@
 .dark-tile{
     background-color: green;
     padding: 1.5rem;
+    width: 1rem;
+    height: 1rem;
+    max-width: 1rem;
+    max-height: 1rem;
 }
 
 .light-tile{
-    background-color: beige;
+    background-color: lightgreen;
     padding: 1.5rem;
+    width: 1rem;
+    height: 1rem;
+    max-width: 1rem;
+    max-height: 1rem;
 }
